fix: add missing parameter according to API spec
